--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./static" target="_blank"><i class="fa-solid fa-network-wired"></i>
+                        <a class="nav-link" href="https://yixboost.github.io/proxy" target="_blank"><i class="fa-solid fa-network-wired"></i>
                             Proxy</a>
                     </li>
                     <li class="nav-item">
